--- a/styles.css
+++ b/styles.css
@@ -49,11 +49,14 @@ h1{
     color: #111729;
 }
 .container-parrafo p{
+    
     font-size: 16px;
     padding-left: 30px;
     color: #4A5567;
 }
-
+.parrafo1{
+    margin-top: 10px;
+}
 .container-avatar{
     margin-top: 20px;
     border-top: #F2F5F9 solid 2px;
